fix margins on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ body, html {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 4%;
 }
 
 .content-wrapper {
